added media queries

--- a/index.html
+++ b/index.html
@@ -13,19 +13,34 @@
 
     <canvas id="canvas"></canvas>
 
-    <div class="timeContainer">
-      <h2>Time:</h2>
-      <div class="time">0</div>
-    </div>
+    <!-- <div class="stats">
+      <div class="timeContainer">
+        <h2>Time:</h2>
+        <div class="time">0</div>
+      </div>
+      <div class="scoreContainer">
+        <h2>Score:</h2>
+        <div class="scoreBoard">0</div>
+      </div>
+      <div class="highScoreContainer">
+        <h2>Highscore:</h2>
+        <div class="highScore">0</div>
+      </div>
+    </div> -->
 
-    <div class="scoreContainer">
-      <h2>Score:</h2>
-      <div class="scoreBoard">0</div>
-    </div>
-
-    <div class="highScoreContainer">
-      <h2>Highscore:</h2>
-      <div class="highScore">0</div>
+    <div class="stats">
+      <div class="timeScore">
+        <h2>Time:</h2>
+        <div class="time">0</div>
+      </div>
+      <div class="timeScore">
+        <h2>Score:</h2>
+        <div class="scoreBoard">0</div>
+      </div>
+      <div class="timeScore">
+        <h2>Highscore:</h2>
+        <div class="highScore">0</div>
+      </div>
     </div>
 
     <div class="mobileControl">
